# tools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  pyproject.toml  pytest.ini  tavily-test.py  tavily_crawl.py  tavily_extract.py  tavily_map.py  tavily_search.py  test_ayan_index.py  test_mongodb_atlas.py  test_s3_comprehensive.py  test_tavily_tools.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: check-markdown-links.yml  integration-test.yml  pr-and-push.yml  pr-title.yml  pypi-publish-on-release.yml  strands-command.yml  test-lint-pr.yml  test-lint.yml
docs/: apify_tool.md  elasticsearch_memory_tool.md  file_state_tracking.md  mongodb_memory_tool.md  opensearch_agentic_tool.md  twzrd_agent_intel_tool.md
rds-discovery/: README.md  __init__.py  requirements.txt
rds-discovery/strands_tools/: chat_video.py
src/strands_tools/: a2a_client.py  a2a_registry_client.py  agent_graph.py  apify.py  apify_core.py  apify_social.py  apply_patch.py  ast_context.py  aws_cli_docs.py  aws_component_mapping.json  batch.py  batch_tool.py  bright_data.py  calculate_date.py  calculator.py  chat_video.py  cron.py  diagram.py  dynamic_mcp_client.py  editor.py  elasticsearch_memory.py  environment.py  exa.py  file_read.py  file_write.py  generate_image.py  generate_image_gemini.py  generate_image_stability.py  get_aws_command_details.py  get_aws_service_commands.py  glob.py  graph.py  grep.py  handoff_to_user.py  http_request.py  image_reader.py  internet_search.py  journal.py  json_processor.py  load_tool.py  (+43 more)
src/strands_tools/base/: __init__.py  tool_provider.py
src/strands_tools/browser/: __init__.py  agent_core_browser.py  browser.py  local_chromium_browser.py  models.py
src/strands_tools/code_interpreter/: __init__.py  agent_core_code_interpreter.py  code_interpreter.py  models.py
src/strands_tools/models/: __init__.py  anthropic.py  bedrock.py  litellm.py  llamaapi.py  ollama.py  openai.py
src/strands_tools/utils/: __init__.py  file_info.py  models.py  user_input.py
tests/: conftest.py  test_a2a_client.py  test_a2a_registry_client.py  test_agent_core_memory.py  test_agent_graph.py  test_apify.py  test_apply_patch.py  test_ast_context.py  test_aws_cli_docs.py  test_batch.py  test_batch_tool.py  test_bright_data.py  test_browser_core.py  test_calculate_date.py  test_calculator.py  test_calculator_precision.py  test_chat_video.py  test_cron.py  test_current_time.py  test_diagram.py  test_dynamic_mcp_client.py  test_dynamic_mcp_client_backup.py  test_editor.py  test_elasticsearch_memory.py  test_environment.py  test_exa.py  test_file_info.py  test_file_read.py  test_file_read_extended.py  test_file_write.py  test_generate_image.py  test_generate_image_gemini.py  test_generate_image_stability.py  test_glob.py  test_graph.py  test_grep.py  test_handoff_to_user.py  test_http_request.py  test_image_reader.py  test_internet_search.py  (+47 more)
tests-integ/: test_basic_tools.py  test_communication_tools.py  test_content_tools.py  test_core_tools.py  test_env_config_integration.py  test_generate_image_stability.py  test_http_request.py  test_load_tool.py  test_memory.py  test_memory_tool.py  test_nova_canvas.py  test_nova_reels.py  test_read_write_edit.py  test_retrieve.py  test_shell.py
tests-integ/utils/: knowledge_base_util.py
tests/browser/: test_agent_core_browser.py  test_browser.py  test_browser_action_handlers.py  test_browser_comprehensive.py  test_local_chromium_browser.py  test_models.py  test_wait_until.py
tests/code_interpreter/: test_agent_core_code_interpreter.py  test_code_interpreter.py
tests/test_memory/: test_memory.py  test_memory_client.py  test_memory_error.py  test_memory_flow.py  test_memory_formatter.py
tests/test_slack/: test_slack.py  test_slack_api.py  test_slack_socket.py
tests/utils/: test_aws_util.py  test_data_util.py  test_generate_schema_util.py  test_model_comprehensive.py  test_model_core.py  test_models.py  test_user_input.py  test_user_input_comprehensive.py
tests_integ/: ci_environments.py  conftest.py  test_generate_image.py  test_generate_image_gemini.py  test_generate_image_stability.py  test_http_request.py  test_load_tool.py  test_mem0_memory_e2e.py  test_memory_tool.py  test_nova_canvas.py  test_nova_reels.py  test_programmatic_tool_caller.py  test_read_write_edit.py  test_retrieve.py  test_s3_data_loader.py  test_s3_integration.py  test_s3_real_aws.py
tests_integ/browser/: test_browser.py
tests_integ/code_interpreter/: test_agent_core_code_interpreter.py  test_agent_core_code_interpreter_custom_identifier.py
tests_integ/mcp_client/: __init__.py  mock_mcp_server.py  test_dynamic_mcp_client.py  test_helpers.py  test_mcp_client.py
tests_integ/utils/: knowledge_base_util.py
